# bevy_contact_projective_decals

./: Cargo.toml
examples/: bench.rs
src/: decal.rs
