[package]
name = "bevy_contact_projective_decals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }

[dev-dependencies]
bevy-inspector-egui = { git = "https://github.com/ka-de/bevy-inspector-egui", branch = "0.14" }
bevy_panorbit_camera = { git = "https://github.com/ka-de/bevy_panorbit_camera", branch = "0.14", features = [
  "bevy_egui",
] }
bevy_screen_diagnostics = { git = "https://github.com/ka-de/bevy_screen_diagnostics", branch = "0.14" }
rand = "0.8.5"
